[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/player/state_machine.gd" type="Script" id=1]
[ext_resource path="res://characters/player/player.gd" type="Script" id=2]
[ext_resource path="res://characters/player/player_sprites.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 18.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Body" parent="." instance=ExtResource( 3 )]

[node name="StateLabel" type="Label" parent="."]
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftWallRaycast" type="RayCast2D" parent="."]
position = Vector2( -5, 22 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 7 )

[node name="RightWallRaycast" type="RayCast2D" parent="."]
position = Vector2( 5, 22 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 7 )

[node name="FloorRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, 22 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2147483649

[node name="WallSlideCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallSlideStickyTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="WallSlideStickyTimer" to="StateMachine" method="_on_WallSlideStickyTimer_timeout"]
